# simple-mini-games-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
guess_the_number/: README.md
guess_the_number/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
server/src/guess_the_number/: gamestate.rs  mod.rs  request.rs  response.rs  routes.rs  state.rs
