[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Game(s)
guess_the_number = { path = "../guess_the_number" }

# Web server
axum = "0.6.20"

# Async runtime
tokio = { version = "1.29.1", features = ["full"] }

# Serialize/Deserialize into JSON
serde = { version = "1.0.183", features = ["derive"] }
